--- a/YOURData/appsettings.json
+++ b/YOURData/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=ap.auth-102;user=test123!;password=test123!;charset=utf8mb4;allowuservariables=true;TreatTinyAsBoolean=true"
-  }
+  "AllowedHosts": "*"
 }
