- adjust paginate color, circle option - custom-select hover bg-color

--- a/YOURData/YOURData.csproj
+++ b/YOURData/YOURData.csproj
@@ -17,6 +17,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="bundleconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bundleconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
